[gd_scene load_steps=12 format=3 uid="uid://dcqixxculuipw"]

[ext_resource type="Script" path="res://addons/datalogue/ui/main.gd" id="1_qojb5"]
[ext_resource type="Script" path="res://addons/datalogue/ui/databases_ui.gd" id="2_bbge7"]
[ext_resource type="Texture2D" uid="uid://cjhme6ts8armj" path="res://addons/datalogue/ui/assets/add.svg" id="2_oanak"]
[ext_resource type="Texture2D" uid="uid://b1pjxdltvtp1" path="res://addons/datalogue/ui/assets/duplicate.svg" id="3_n8033"]
[ext_resource type="Texture2D" uid="uid://csytqo75pf64x" path="res://addons/datalogue/ui/assets/remove.svg" id="4_gdjpx"]
[ext_resource type="Texture2D" uid="uid://dbxmoer6eanmv" path="res://addons/datalogue/ui/assets/filter.svg" id="5_f2h61"]
[ext_resource type="Script" path="res://addons/datalogue/ui/items_ui.gd" id="6_h4xjf"]
[ext_resource type="PackedScene" uid="uid://qdqlhdyxoycs" path="res://addons/datalogue/ui/forms/create_form.tscn" id="6_t0t4a"]
[ext_resource type="Script" path="res://addons/datalogue/ui/classif_ui.gd" id="8_vioch"]
[ext_resource type="PackedScene" uid="uid://ddbxamso0dywb" path="res://addons/datalogue/ui/forms/remove_form.tscn" id="8_wn8wp"]
[ext_resource type="PackedScene" uid="uid://o53wgdfajjdo" path="res://addons/datalogue/ui/forms/classif_form.tscn" id="10_ll3bf"]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1_qojb5" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borders" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLayout" type="VBoxContainer" parent="Borders"]
offset_left = 5.0
offset_top = 5.0
offset_right = 1019.0
offset_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewLayout" type="HBoxContainer" parent="Borders/MainLayout"]
offset_right = 1014.0
offset_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DatabasesLayout" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout"]
offset_right = 335.0
offset_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "2_bbge7" )

[node name="Title" type="Label" parent="Borders/MainLayout/ViewLayout/DatabasesLayout"]
offset_right = 335.0
offset_bottom = 30.0
rect_min_size = Vector2(0, 30)
text = "Databases"

[node name="Separator" type="HSeparator" parent="Borders/MainLayout/ViewLayout/DatabasesLayout"]
offset_top = 34.0
offset_right = 335.0
offset_bottom = 38.0

[node name="DatabasesList" type="ItemList" parent="Borders/MainLayout/ViewLayout/DatabasesLayout"]
offset_top = 42.0
offset_right = 335.0
offset_bottom = 557.0
size_flags_vertical = 3

[node name="DatabasesTools" type="HBoxContainer" parent="Borders/MainLayout/ViewLayout/DatabasesLayout"]
offset_top = 561.0
offset_right = 335.0
offset_bottom = 590.0

[node name="AddDatabaseBtn" type="Button" parent="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools"]
offset_right = 109.0
offset_bottom = 29.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
icon = ExtResource( "2_oanak" )
icon_alignment = 1

[node name="DupDatabaseBtn" type="Button" parent="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools"]
offset_left = 113.0
offset_right = 222.0
offset_bottom = 29.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
disabled = true
icon = ExtResource( "3_n8033" )
icon_alignment = 1

[node name="RemoveDatabaseBtn" type="Button" parent="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools"]
modulate = Color(1, 0.25098, 0.121569, 1)
offset_left = 226.0
offset_right = 335.0
offset_bottom = 29.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( "4_gdjpx" )
icon_alignment = 1

[node name="ItemsLayout" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout"]
offset_left = 339.0
offset_right = 674.0
offset_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "6_h4xjf" )

[node name="Title" type="Label" parent="Borders/MainLayout/ViewLayout/ItemsLayout"]
offset_right = 335.0
offset_bottom = 30.0
rect_min_size = Vector2(0, 30)
text = "Items"

[node name="ItemFilterBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemsLayout/Title"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
disabled = true
icon = ExtResource( "5_f2h61" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="HSeparator" parent="Borders/MainLayout/ViewLayout/ItemsLayout"]
offset_top = 34.0
offset_right = 335.0
offset_bottom = 38.0

[node name="ItemsList" type="ItemList" parent="Borders/MainLayout/ViewLayout/ItemsLayout"]
offset_top = 42.0
offset_right = 335.0
offset_bottom = 557.0
size_flags_vertical = 3

[node name="ItemsTools" type="HBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemsLayout"]
offset_top = 561.0
offset_right = 335.0
offset_bottom = 590.0

[node name="AddItemBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools"]
offset_right = 109.0
offset_bottom = 29.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
disabled = true
icon = ExtResource( "2_oanak" )
icon_alignment = 1

[node name="DupItemBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools"]
offset_left = 113.0
offset_right = 222.0
offset_bottom = 29.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( "3_n8033" )
icon_alignment = 1

[node name="RemoveItemBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools"]
modulate = Color(1, 0.25098, 0.121569, 1)
offset_left = 226.0
offset_right = 335.0
offset_bottom = 29.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
disabled = true
icon = ExtResource( "4_gdjpx" )
icon_alignment = 1

[node name="ItemLayout" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout"]
offset_left = 678.0
offset_right = 1014.0
offset_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_right = 336.0
offset_bottom = 30.0
rect_min_size = Vector2(0, 30)
text = "Item data"

[node name="Separator" type="HSeparator" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 34.0
offset_right = 336.0
offset_bottom = 38.0

[node name="ClassifTitle" type="Label" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 42.0
offset_right = 336.0
offset_bottom = 68.0
text = "Classifications"

[node name="ClassifLayout" type="HBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 72.0
offset_right = 336.0
offset_bottom = 222.0
size_flags_vertical = 3
script = ExtResource( "8_vioch" )

[node name="ClassifList" type="ItemList" parent="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout"]
offset_right = 304.0
offset_bottom = 150.0
size_flags_horizontal = 3

[node name="ClassifTools" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout"]
offset_left = 308.0
offset_right = 336.0
offset_bottom = 150.0

[node name="AddClassifBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools"]
offset_right = 28.0
offset_bottom = 47.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
disabled = true
icon = ExtResource( "2_oanak" )

[node name="DupClassifBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools"]
offset_top = 51.0
offset_right = 28.0
offset_bottom = 98.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "3_n8033" )

[node name="RemoveClassifBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools"]
modulate = Color(1, 0.25098, 0.121569, 1)
offset_top = 102.0
offset_right = 28.0
offset_bottom = 150.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "4_gdjpx" )

[node name="ValuesTitle" type="Label" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 226.0
offset_right = 336.0
offset_bottom = 252.0
text = "Values"

[node name="ValuesLayout" type="HBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 256.0
offset_right = 336.0
offset_bottom = 406.0
size_flags_vertical = 3

[node name="ValueList" type="ItemList" parent="Borders/MainLayout/ViewLayout/ItemLayout/ValuesLayout"]
offset_right = 304.0
offset_bottom = 150.0
size_flags_horizontal = 3

[node name="ValuesTools" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout/ValuesLayout"]
offset_left = 308.0
offset_right = 336.0
offset_bottom = 150.0

[node name="AddValueBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ValuesLayout/ValuesTools"]
offset_right = 28.0
offset_bottom = 47.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "2_oanak" )

[node name="DupValueBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ValuesLayout/ValuesTools"]
offset_top = 51.0
offset_right = 28.0
offset_bottom = 98.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "3_n8033" )

[node name="RemoveValueBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/ValuesLayout/ValuesTools"]
modulate = Color(1, 0.25098, 0.121569, 1)
offset_top = 102.0
offset_right = 28.0
offset_bottom = 150.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "4_gdjpx" )

[node name="TextsTitle" type="Label" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 410.0
offset_right = 336.0
offset_bottom = 436.0
text = "Texts"

[node name="TextsLayout" type="HBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout"]
offset_top = 440.0
offset_right = 336.0
offset_bottom = 590.0
size_flags_vertical = 3

[node name="TextsList" type="ItemList" parent="Borders/MainLayout/ViewLayout/ItemLayout/TextsLayout"]
offset_right = 304.0
offset_bottom = 150.0
size_flags_horizontal = 3

[node name="TextsTools" type="VBoxContainer" parent="Borders/MainLayout/ViewLayout/ItemLayout/TextsLayout"]
offset_left = 308.0
offset_right = 336.0
offset_bottom = 150.0

[node name="AddTextBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/TextsLayout/TextsTools"]
offset_right = 28.0
offset_bottom = 47.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "2_oanak" )

[node name="DupTextBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/TextsLayout/TextsTools"]
offset_top = 51.0
offset_right = 28.0
offset_bottom = 98.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "3_n8033" )

[node name="RemoveTextBtn" type="Button" parent="Borders/MainLayout/ViewLayout/ItemLayout/TextsLayout/TextsTools"]
modulate = Color(1, 0.25098, 0.121569, 1)
offset_top = 102.0
offset_right = 28.0
offset_bottom = 150.0
size_flags_vertical = 3
disabled = true
icon = ExtResource( "4_gdjpx" )

[node name="CreateDialog" type="PopupPanel" parent="."]
title = "Create Dialog"
size = Vector2i(308, 108)
exclusive = true
borderless = false
always_on_top = true
content_scale_mode = 1

[node name="CreateForm" parent="CreateDialog" instance=ExtResource( "6_t0t4a" )]
offset_left = 4.0
offset_top = 4.0
offset_right = -720.0
offset_bottom = -496.0

[node name="RemoveDialog" type="PopupPanel" parent="."]
title = "Remove Dialog"
exclusive = true
borderless = false
always_on_top = true

[node name="RemoveForm" parent="RemoveDialog" instance=ExtResource( "8_wn8wp" )]
offset_left = 4.0
offset_top = 4.0
offset_right = -720.0
offset_bottom = -496.0

[node name="ClassifDialog" type="PopupPanel" parent="."]
exclusive = true
borderless = false
always_on_top = true

[node name="ClassifForm" parent="ClassifDialog" instance=ExtResource( "10_ll3bf" )]
offset_left = 4.0
offset_top = 4.0
offset_right = -720.0
offset_bottom = -296.0

[connection signal="database_selected" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_database_selected"]
[connection signal="database_selected" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_database_selected"]
[connection signal="request_copy_form" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="." method="_on_request_copy_form"]
[connection signal="request_create_form" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="." method="_on_request_create_form"]
[connection signal="request_remove_form" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="." method="_on_request_remove_form"]
[connection signal="request_rename_form" from="Borders/MainLayout/ViewLayout/DatabasesLayout" to="." method="_on_request_rename_form"]
[connection signal="item_activated" from="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesList" to="Borders/MainLayout/ViewLayout/DatabasesLayout" method="_on_DatabasesList_item_activated"]
[connection signal="item_selected" from="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesList" to="Borders/MainLayout/ViewLayout/DatabasesLayout" method="_on_DatabasesList_item_selected"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools/AddDatabaseBtn" to="Borders/MainLayout/ViewLayout/DatabasesLayout" method="_on_AddDatabaseBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools/DupDatabaseBtn" to="Borders/MainLayout/ViewLayout/DatabasesLayout" method="_on_DupDatabaseBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/DatabasesLayout/DatabasesTools/RemoveDatabaseBtn" to="Borders/MainLayout/ViewLayout/DatabasesLayout" method="_on_RemoveDatabaseBtn_pressed"]
[connection signal="item_selected" from="Borders/MainLayout/ViewLayout/ItemsLayout" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_item_selected"]
[connection signal="request_copy_form" from="Borders/MainLayout/ViewLayout/ItemsLayout" to="." method="_on_request_copy_form"]
[connection signal="request_create_form" from="Borders/MainLayout/ViewLayout/ItemsLayout" to="." method="_on_request_create_form"]
[connection signal="request_remove_form" from="Borders/MainLayout/ViewLayout/ItemsLayout" to="." method="_on_request_remove_form"]
[connection signal="request_rename_form" from="Borders/MainLayout/ViewLayout/ItemsLayout" to="." method="_on_request_rename_form"]
[connection signal="item_activated" from="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsList" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_ItemsList_item_activated"]
[connection signal="item_selected" from="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsList" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_ItemsList_item_selected"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools/AddItemBtn" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_AddItemBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools/DupItemBtn" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_DupItemBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemsLayout/ItemsTools/RemoveItemBtn" to="Borders/MainLayout/ViewLayout/ItemsLayout" method="_on_RemoveItemBtn_pressed"]
[connection signal="request_classif_form" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" to="." method="_on_request_classif_form"]
[connection signal="request_remove_form" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" to="." method="_on_request_remove_form"]
[connection signal="item_activated" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifList" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_ClassifList_item_activated"]
[connection signal="item_selected" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifList" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_ClassifList_item_selected"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools/AddClassifBtn" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_AddClassifBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools/DupClassifBtn" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_DupClassifBtn_pressed"]
[connection signal="pressed" from="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout/ClassifTools/RemoveClassifBtn" to="Borders/MainLayout/ViewLayout/ItemLayout/ClassifLayout" method="_on_RemoveClassifBtn_pressed"]
[connection signal="about_to_popup" from="CreateDialog" to="." method="_on_CreateDialog_about_to_popup"]
[connection signal="request_close" from="CreateDialog/CreateForm" to="." method="_on_CreateForm_request_close"]
[connection signal="submitted" from="CreateDialog/CreateForm" to="." method="_on_CreateForm_submitted"]
[connection signal="about_to_popup" from="RemoveDialog" to="." method="_on_RemoveDialog_about_to_popup"]
[connection signal="request_close" from="RemoveDialog/RemoveForm" to="." method="_on_RemoveForm_request_close"]
[connection signal="submitted" from="RemoveDialog/RemoveForm" to="." method="_on_RemoveForm_submitted"]
[connection signal="about_to_popup" from="ClassifDialog" to="." method="_on_ClassifDialog_about_to_popup"]
[connection signal="request_close" from="ClassifDialog/ClassifForm" to="." method="_on_ClassifForm_request_close"]
[connection signal="submitted" from="ClassifDialog/ClassifForm" to="." method="_on_ClassifForm_submitted"]
